deployments/base/svc-echo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      otel-trivago/app: echo
  template:
    metadata:
      labels:
        otel-trivago/app: echo
    spec:
      containers:
        - name: hostname
          imagePullPolicy: Always
          image: docker.io/falmar/hostname:latest
          ports:
            - containerPort: 80
              name: http
---

apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    otel-trivago/app: echo
spec:
  selector:
    otel-trivago/app: echo
  type: NodePort
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: http
      nodePort: 30005
---
