deployments/base/svc-reservation.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation
spec:
  replicas: 3
  selector:
    matchLabels:
      otel-trivago/app: reservation
  template:
    metadata:
      labels:
        otel-trivago/app: reservation
    spec:
      containers:
        - name: reservation
          imagePullPolicy: Always
          image: docker.io/falmar/otel-trivago:reservation
          ports:
            - containerPort: 80
              name: grpc
            - containerPort: 9090
              name: metrics
---

apiVersion: v1
kind: Service
metadata:
  name: reservation
  labels:
    otel-trivago/app: reservation
spec:
  selector:
    otel-trivago/app: reservation
  type: ClusterIP
  ports:
    - protocol: TCP
      name: grpc
      port: 80
    - protocol: TCP
      name: metrics
      port: 9090
---
