deployments/base/svc-room.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: room
spec:
  replicas: 3
  selector:
    matchLabels:
      otel-trivago/app: room
  template:
    metadata:
      labels:
        otel-trivago/app: room
    spec:
      containers:
        - name: room
          imagePullPolicy: Always
          image: docker.io/falmar/otel-trivago:room
          ports:
            - containerPort: 80
              name: grpc
            - containerPort: 9090
              name: metrics
---

apiVersion: v1
kind: Service
metadata:
  name: room
  labels:
    otel-trivago/app: room
spec:
  selector:
    otel-trivago/app: room
  type: ClusterIP
  ports:
    - protocol: TCP
      name: grpc
      port: 80
---
