deployments/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http
  labels:
    otel-trivago/env: unknown
  annotations:
    cert-manager.io/issuer: "ca-issuer"
    cert-manager.io/private-key-algorithm: "ECDSA"
    cert-manager.io/private-key-size: "256"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: otel-trivago.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo
                port:
                  name: http
    - host: jaeger.otel-trivago.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaeger
                port:
                  name: ui
  tls:
    - hosts:
        - jaeger.otel-trivago.local
        - otel-trivago.local
      secretName: http-ingress-cert
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpc
  annotations:
    cert-manager.io/issuer: "ca-issuer"
    cert-manager.io/private-key-algorithm: "ECDSA"
    cert-manager.io/private-key-size: "256"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
    - host: reservation.otel-trivago.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reservation
                port:
                  name: grpc
    - host: room.otel-trivago.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: room
                port:
                  name: grpc
  tls:
    - hosts:
        - grpc.otel-trivago.local
        - reservation.otel-trivago.local
        - room.otel-trivago.local
      secretName: grpc-ingress-cert
---
