deployments/base/svc-frontdesk.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontdesk-ingress
spec:
  podSelector:
    matchLabels:
      otel-trivago/app: "frontdesk"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              otel-trivago/app: "frontdesk"
      ports:
        - protocol: TCP
          port: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontdesk
spec:
  replicas: 3
  selector:
    matchLabels:
      otel-trivago/app: frontdesk
  template:
    metadata:
      labels:
        otel-trivago/app: frontdesk
        otel-trivago/grpc-otlp: "true"
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "9090"
    spec:
      containers:
        - name: frontdesk
          imagePullPolicy: IfNotPresent
          image: trivago-image
          args:
            - frontdesk
          ports:
            - containerPort: 80
              name: grpc
            - containerPort: 9090
              name: metrics
---

apiVersion: v1
kind: Service
metadata:
  name: frontdesk
  labels:
    otel-trivago/app: frontdesk
spec:
  selector:
    otel-trivago/app: frontdesk
  type: ClusterIP
  ports:
    - protocol: TCP
      name: grpc
      port: 80
    - protocol: TCP
      name: metrics
      port: 9090
---
