deployments/base/svc-stay.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stay-ingress
spec:
  podSelector:
    matchLabels:
      otel-trivago/app: "stay"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              otel-trivago/app: "frontdesk"
      ports:
        - protocol: TCP
          port: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: stay
spec:
  replicas: 3
  selector:
    matchLabels:
      otel-trivago/app: stay
  template:
    metadata:
      labels:
        otel-trivago/app: stay
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "9090"
    spec:
      containers:
        - name: stay
          imagePullPolicy: Always
          image: stay-image
          ports:
            - containerPort: 80
              name: grpc
            - containerPort: 9090
              name: metrics
---

apiVersion: v1
kind: Service
metadata:
  name: stay
  labels:
    otel-trivago/app: stay
spec:
  selector:
    otel-trivago/app: stay
  type: ClusterIP
  ports:
    - protocol: TCP
      name: grpc
      port: 80
    - protocol: TCP
      name: metrics
      port: 9090
---
